# hr-automatization-project

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  index.html  package-lock.json  package.json  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  create_tables.sql  pyproject.toml
backend/app/: __init__.py  main.py  models.py  module2_seed.py  module4_seed.py  open_api.py  seed.py
backend/app/core/: __init__.py
backend/app/core/audit/: __init__.py  domain.py  models.py  ports.py  repository.py  router.py  schemas.py  service.py
backend/app/core/config/: __init__.py  settings.py
backend/app/core/database/: __init__.py  base.py  mixins.py  session.py
backend/app/core/errors/: __init__.py  codes.py  exceptions.py  handlers.py
backend/app/core/events/: __init__.py  domain.py  models.py  ports.py  repository.py  service.py
backend/app/core/logging/: __init__.py  context.py  middleware.py  setup.py
backend/app/core/security/: __init__.py  authorization.py  context.py  dependencies.py  dev.py  factory.py  identity.py  jwt.py  middleware.py  ports.py  require.py
backend/app/modules/: __init__.py
backend/app/modules/absence/: __init__.py
backend/app/modules/access_control/: __init__.py
backend/app/modules/business_processes/: __init__.py  seed.py
backend/app/modules/employees/: __init__.py
backend/app/modules/hiring_requests/: __init__.py  (+3 more)
backend/app/shared/: __init__.py  identifiers.py  time.py
backend/docs/: API_CONTRACTS.md  ARCHITECTURE.md  DOMAIN_MODEL.md  FRONTEND_INTEGRATION.md  FUTURE_MODULES.md  ORGANIZATION_VERSIONING.md  PERMISSIONS.md  RECRUITMENT_AND_HIRING.md  TERMINATION_AND_OFFBOARDING.md
backend/migrations/: README.md  env.py
backend/migrations/versions/: 0001_module1_initial.py  0002_integrated_workflows.py  0003_drop_business_processes.py  0004_employee_absences.py  0005_absence_leave_business_trips.py  0005_new_employee_hiring_requests.py  0006_merge_hiring_and_absence.py  0007_hiring_auto_employee.py  0007_module4_timesheet.py  0007_permission_administration.py  0007_regulated_hiring.py  0008_merge_module4_hiring_auto.py  0009_employee_number_sequence.py  0010_employee_probation_end.py  0011_employee_hiring_profile.py  0012_merge_regulated_hiring.py  0012_permission_administration.py
backend/src/hr/: employee.controller.ts  employee.service.ts  hr.repository.ts  prisma-hr.repository.ts
backend/tests/absence/: test_routes.py
backend/tests/access_control/: test_facade.py  test_scopes.py
backend/tests/core/: __init__.py  test_api_contract.py  test_audit_and_logging.py  test_module2_api_contract.py  test_security.py  test_seed.py
backend/tests/employees/: __init__.py  fakes.py  test_absences.py  test_api_errors.py  test_core_adapters.py  test_functions.py  test_service.py
backend/tests/hiring_requests/: test_employee_identity.py  test_pdf.py
backend/tests/integration/: __init__.py  conftest.py  test_absence_end_to_end.py  test_module2_end_to_end.py  test_postgresql_invariants.py  test_regulated_hiring_postgresql.py
backend/tests/organization/: __init__.py  conftest.py  fakes.py  test_external_validation.py  test_outbox_adapter.py  test_relationships_and_staffing.py  test_structure_editing.py  test_validation_and_publication.py
backend/tests/regulated_hiring/: test_rules.py
(+236 files in other folders)
