[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spk-corporate-backend"
version = "0.1.0"
description = "SPK Ertis corporate HR system modular-monolith backend"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
dependencies = [
  "alembic>=1.14,<2",
  "boto3>=1.35,<2",
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.6,<3",
  "psycopg[binary,pool]>=3.2,<4",
  "python-multipart>=0.0.20,<1",
  "PyJWT[crypto]>=2.10,<3",
  "SQLAlchemy[asyncio]>=2.0.36,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.8,<1",
]

[project.scripts]
spk-seed = "app.seed:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# RUF001: test fixtures legitimately contain Russian user-facing strings.
"tests/**/*.py" = ["S101", "S105", "S106", "RUF001"]
"migrations/**/*.py" = ["E501"]
# Business-function titles are user-facing Russian labels rendered by the client.
"app/modules/employees/application/functions.py" = ["RUF001"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
files = ["app"]
exclude = ["migrations"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["jwt.*"]
ignore_missing_imports = true
